Updates to include contributors functionality
